; ModuleID = '/home/carl/AnghaBench/openssl/test/extr_packettest.c_test_PACKET_null_init.c'
source_filename = "/home/carl/AnghaBench/openssl/test/extr_packettest.c_test_PACKET_null_init.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 ()* @test_PACKET_null_init to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @test_PACKET_null_init() #0 {
  %1 = alloca i32, align 4
  %2 = alloca i32, align 4
  %3 = call i32 @PACKET_null_init(i32* %2)
  %4 = call i32 @PACKET_remaining(i32* %2)
  %5 = call i32 @TEST_size_t_eq(i32 %4, i32 0)
  %6 = icmp ne i32 %5, 0
  br i1 %6, label %7, label %11

7:                                                ; preds = %0
  %8 = call i32 @PACKET_forward(i32* %2, i32 1)
  %9 = call i32 @TEST_false(i32 %8)
  %10 = icmp ne i32 %9, 0
  br i1 %10, label %12, label %11

11:                                               ; preds = %7, %0
  store i32 0, i32* %1, align 4
  br label %13

12:                                               ; preds = %7
  store i32 1, i32* %1, align 4
  br label %13

13:                                               ; preds = %12, %11
  %14 = load i32, i32* %1, align 4
  ret i32 %14
}

declare dso_local i32 @PACKET_null_init(i32*) #1

declare dso_local i32 @TEST_size_t_eq(i32, i32) #1

declare dso_local i32 @PACKET_remaining(i32*) #1

declare dso_local i32 @TEST_false(i32) #1

declare dso_local i32 @PACKET_forward(i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
